; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_dsm.c_dsm_backend_shutdown.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_dsm.c_dsm_backend_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dsm_segment_list = common dso_local global i32 0, align 4
@dsm_segment = common dso_local global i32 0, align 4
@seg = common dso_local global i32 0, align 4
@node = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dsm_backend_shutdown() #0 {
  br label %1

1:                                                ; preds = %5, %0
  %2 = call i32 @dlist_is_empty(i32* @dsm_segment_list)
  %3 = icmp ne i32 %2, 0
  %4 = xor i1 %3, true
  br i1 %4, label %5, label %14

5:                                                ; preds = %1
  %6 = load i32, i32* @dsm_segment, align 4
  %7 = load i32, i32* @seg, align 4
  %8 = mul nsw i32 %6, %7
  %9 = load i32, i32* @dsm_segment, align 4
  %10 = load i32, i32* @node, align 4
  %11 = call i32 @dlist_head_element(i32 %9, i32 %10, i32* @dsm_segment_list)
  store i32 %11, i32* @seg, align 4
  %12 = load i32, i32* @seg, align 4
  %13 = call i32 @dsm_detach(i32 %12)
  br label %1

14:                                               ; preds = %1
  ret void
}

declare dso_local i32 @dlist_is_empty(i32*) #1

declare dso_local i32 @dlist_head_element(i32, i32, i32*) #1

declare dso_local i32 @dsm_detach(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
